fix:fixed the text alignment

--- a/stylesheet_mainpage.css
+++ b/stylesheet_mainpage.css
@@ -143,8 +143,6 @@ body {
 .stop{
   display:none;
   width: 5%;
-  padding-right: 2%;
-  padding-left: 2%;
 }
 .popup {
   display: none;
